Update deployment manifest

--- a/deployment.yaml
+++ b/deployment.yaml
@@ -20,6 +20,8 @@ spec:
       containers:
       - image: ebenezermakinde/simplestaticapp:latest
         name: simplestaticapp
+        ports:
+        - containerPort: 3500
         resources: {}
 status: {}
 ---
