--- a/deployment.yaml
+++ b/deployment.yaml
@@ -28,13 +28,11 @@ status: {}
 apiVersion: v1
 kind: Service
 metadata:
-  name: lb-service
-  labels:
-    app: lb-service
+  name: simpleapp-service
 spec:
-  type: LoadBalancer
   ports:
   - port: 3500
+    protocol: TCP
     targetPort: 3500
   selector:
     app: simplestaticapp
